# roscpplint

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
cmake/: roscpplint-extras.cmake.em
scripts/: cpplint  pep8  test_wrapper
src/roscpplint/: cpplint_wrapper.py
tests/: CMakeLists.txt  runlint.py
